--- a/views/index.html
+++ b/views/index.html
@@ -33,17 +33,17 @@
 		<div class="row">
 			<div class="col-lg-12 text-left">
 				<h1 class="mt-5">Welcome to Zara</h1>
-				<p class="lead">Select your entrees from the menu below.</p>
+				<p class="lead">Select your Purchases.</p>
 			</div>
 			<div id="results" class="col-lg-8 text-center order-3"></div>
 			<div class="col-lg-4 text-center order-2">
 				<form enctype="application/json" action="/post/json" method="post">
 					<div class="form-group">
 						<select class="form-control" name="sec_n">
-							<option value="0">Side Dishes</option>
-							<option value="1">Breakfast</option>
-							<option value="2">Lunch</option>
-							<option value="3">Dinner</option>
+							<option value="0">Select Caterogy</option>
+							<option value="1">Woman</option>
+							<option value="2">Man</option>
+							<option value="3">Kids</option>
 						</select>
 					</div>
 					<div class="form-group">
