--- a/views/index.html
+++ b/views/index.html
@@ -40,7 +40,7 @@
 				<form enctype="application/json" action="/post/json" method="post">
 					<div class="form-group">
 						<select class="form-control" name="sec_n">
-							<option value="0">Select Caterogy</option>
+							<option value="0">Select Category</option>
 							<option value="1">Woman</option>
 							<option value="2">Man</option>
 							<option value="3">Kids</option>
