--- a/views/index.html
+++ b/views/index.html
@@ -20,10 +20,10 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active"><a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a></li>
-					<li class="nav-item"><a class="nav-link" href="#">About</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+					<li class="nav-item active"><a class="nav-link" href="#">HOME<span class="sr-only">(current)</span></a></li>
+					<li class="nav-item"><a class="nav-link" href="#">MY INFORMATION</a></li>
+					<li class="nav-item"><a class="nav-link" href="#">SETTINGS</a></li>
+					<li class="nav-item"><a class="nav-link" href="#">CONTACT</a></li>
 				</ul>
 			</div>
 		</div>
