--- a/views/css/PaddysCafeStyles.css
+++ b/views/css/PaddysCafeStyles.css
@@ -2,10 +2,14 @@ html {
   position: relative;
   min-height: 100%;
 }
+
 body {
+
+    background-image: url(../img/zara.png);
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
+
 .footer {
   position: absolute;
   bottom: 0;
