--- a/views/css/PaddysCafeStyles.css
+++ b/views/css/PaddysCafeStyles.css
@@ -5,7 +5,7 @@ html {
 
 body {
 
-    background-image: url(../img/zara.png);
+    background-image: url(../img/zara1.jpg);
   background-size: 1000px 1200px;
   background-repeat: no-repeat;
   /* Margin bottom by footer height */
