--- a/views/css/PaddysCafeStyles.css
+++ b/views/css/PaddysCafeStyles.css
@@ -39,6 +39,6 @@ table, th, td {
      font-weight: bold;
 }
 .selected {
-            background-color: #dc3545;
+            background-color: #088708;
             color: #FFF;
 }
