--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
 	<title>ZARA IRELAND</title>
 	<!-- Bootstrap core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/PaddysCafeStyles.css" rel="stylesheet">
+	<link href="css/ZaraShopStyles.css" rel="stylesheet">
 </head>
 
 <body>
