--- a/views/css/ZaraShopStyles.css
+++ b/views/css/ZaraShopStyles.css
@@ -21,6 +21,9 @@ body {
   line-height: 60px; /* Vertically center the text there */
   background-color: #f5f5f5;
 }
+p {
+  font-weight: bold;
+}
 table, th, td {
      border-collapse: collapse;
      border: 10px solid black;
