--- a/views/css/ZaraShopStyles.css
+++ b/views/css/ZaraShopStyles.css
@@ -19,7 +19,7 @@ body {
   /* Set the fixed height of the footer here */
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
-  background-color: #f5f5f5;
+  background-color: #9c9c9c;
 }
 
 table, th, td {
@@ -28,7 +28,7 @@ table, th, td {
      text-align: center;
 }
  table {
-     border-collapse: collapse;
+     border-collapse: collapse #9c9c9c;
      width:100%;
 }
  td, th {
@@ -41,5 +41,5 @@ table, th, td {
 }
 .selected {
             background-color: #088708;
-            color: #FFF;
+            color: #9c9c9c;
 }
