--- a/views/css/ZaraShopStyles.css
+++ b/views/css/ZaraShopStyles.css
@@ -19,22 +19,25 @@ body {
   /* Set the fixed height of the footer here */
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
-  background-color: #9c9c9c;
+  background-color: #252850;
 }
 
 table, th, td {
      border-collapse: collapse;
-     border: 10px solid black;
+     border: 12px solid #393d42;
      text-align: center;
 }
  table {
-     border-collapse: collapse #9c9c9c;
+     border-collapse: collapse #393d42;
      width:100%;
+     background-color: #aeb8e6;
+       text-align: center;
 }
  td, th {
-     border: 1px solid #ced4da;
+     border: 10px solid #9c9c9c;
+     
      padding: 0.5rem;
-     text-align: left;
+     text-align: center;
 }
  th {
      font-weight: bold;
