--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- This code is taking from the oringinal  Mikhail Timofeev project  and I did it my own changes-->
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
