--- a/views/index.html
+++ b/views/index.html
@@ -6,8 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="">
 	<meta name="author" content="">
+    <!-- Title of the main page -->
 	<title>ZARA IRELAND</title>
 	<!-- Bootstrap core CSS -->
+    <!-- they are linking into the system -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/ZaraShopStyles.css" rel="stylesheet">
 	<link href="ZaraShopStyles.css" rel="stylesheet">
@@ -43,12 +45,14 @@
 				<form enctype="application/json" action="/post/json" method="post">
 					<div class="form-group">
 						<select class="form-control" name="sec_n">
+                        <!-- All our category and the user has to select -->
 							<option value="0">Select Category</option>
 							<option value="1">Woman</option>
 							<option value="2">Man</option>
 							<option value="3">Kids</option>
 						</select>
 					</div>
+                    <!-- Getting information from the user and putting true  -->
 					<div class="form-group">
 						<input class="form-control" type="text" name="item" placeholder="Item">
 					</div>
@@ -68,41 +72,7 @@
 	</footer>
 
 
-	<!--2 Page Content -->
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12 text-left">
-				<h1 class="mt-5">Welcome to Zara Home</h1>
-				<p class="lead">Select your Purchases.</p>
-			</div>
-			<div id="results" class="col-lg-8 text-center order-3"></div>
-			<div class="col-lg-4 text-center order-2">
-				<form enctype="application/json" action="/post/json" method="post">
-					<div class="form-group">
-						<select class="form-control" name="sec_n">
-							<option value="0">Select Category</option>
-							<option value="1">Woman</option>
-							<option value="2">Man</option>
-							<option value="3">Kids</option>
-						</select>
-					</div>
-					<div class="form-group">
-						<input class="form-control" type="text" name="item" placeholder="Item">
-					</div>
-					<div class="form-group">
-						<input class="form-control" type="text" name="price" placeholder="Price">
-					</div>
-					<button type="submit" class="btn btn-primary btn-block">Add to the Basket</button>
-				</form>
-                    <button id="delete" class="btn btn-block btn-danger">Delete Item</button>
-                    <p class="text-muted">To delete an entree, click the required row first</p>
-			</div>
-		</div>
-	</div>
-	<footer class="footer">
-		<div class="container">	<span class="text-muted">&copy; 2019</span>
-		</div>
-	</footer>
+
 
 	<!-- Bootstrap core JavaScript -->
 	<script src="jquery/jquery.min.js"></script>
