--- a/views/index.html
+++ b/views/index.html
@@ -24,6 +24,7 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
+                	<!-- Linking home about service and contact -->
 					<li class="nav-item active"><a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a></li>
 					<li class="nav-item active"><a class="nav-link" href="#">About<span class="sr-only">(current)</span></a></li>
 					<li class="nav-item active"><a class="nav-link" href="#">Services</a></li>
@@ -37,6 +38,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-left">
+            	<!-- main message -->
 				<h1 class="mt-5">Welcome to Zara</h1>
 				<p class="lead">Select your Purchases.</p>
 			</div>
@@ -72,7 +74,7 @@
 	</footer>
 
 
-
+	<!-- linking to anothers fuctions -->
 
 	<!-- Bootstrap core JavaScript -->
 	<script src="jquery/jquery.min.js"></script>
